[package]
name = "lotus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.7.2"
serde = { version = "1.0.152", features = ["derive"] }
dirs = "4.0.0"
ignore = "0.4.20"
walkdir = "2.3.2"